# crypto-wasm

./: .gitignore  Cargo.toml  README.md  jest.config.js  package.json  rust-toolchain.toml  tsconfig.json
.github/workflows/: any-pr.yaml  npm-publish.yml  test.yaml
bench/: bbs-plus.ts  bbs.ts  bound-check-snark.ts  helper.ts  index.ts  ps.ts
sample/browser/: README.md  index.web-sample.js  package.json  webpack.config.js
sample/ts-node/: package.json
sample/ts-node/src/: index.ts
scripts/: build-package.sh  pack-wasm-base64.js  publish.sh  test-browser.sh
src/: accumulator.rs  bbs.rs  bbs_plus.rs  bddt16_kvac.rs  bound_check.rs  common.rs  delegated_proof.rs  dock_bbs_plus.rs  frost_dkg.rs  keyed_proof.rs  legosnark.rs  lib.rs  proof_system.rs  ps.rs  r1cs.rs  saver.rs  utils.rs  vb_accumulator.rs
src/accumulator/: common.rs  kb_accumulator.rs  mod.rs  vb_accumulator.rs
src/composite_proof_system/: mod.rs  setup_params.rs  statement.rs
src/composite_proof_system/statements/: accumulator.rs  bound_check.rs  mod.rs  pok_sig.rs  r1cs.rs  saver.rs
src/js/: accumulator.d.ts  accumulator_wasm.js  bbs_plus.d.ts  bbs_plus_wasm.js  bbs_wasm.js  bdd16_kvac_wasm.js  bound_check_wasm.js  common.js  composite_proof_system_wasm.js  delegated_proof_wasm.js  frost_dkg_wasm.js  index.d.ts  init_wasm.js  kb_accumulator_wasm.js  keyed_proof_wasm.js  legosnark_wasm.js  proof_system.d.ts  proof_system_wasm.js  ps_wasm.js  r1cs_wasm.js  saver_wasm.js  setup_params_wasm.js  threshold_sig_wasm.js  util.d.ts  util.js  util_wasm.js  wasm_module.js
src/js/type_declarations/: accumulator.d.ts  bbs.d.ts  bbs_plus.d.ts  bdd16_kvac.d.ts  bound_check.d.ts  composite_proof_system.d.ts  delegated_proof.d.ts  frost_dkg.d.ts  index.d.ts  kb_accumulator.d.ts  keyed_proof.d.ts  legosnark.d.ts  proof_system.d.ts  ps.d.ts  r1cs.d.ts  saver.d.ts  setup_params.d.ts  threshold_sig.d.ts  util.d.ts
src/js/type_declrations/: accumulator.d.ts  bbs_plus.d.ts  proof_system.d.ts  util.d.ts
src/js/types/: AccumulatorParams.ts  BbsKeypair.ts  BbsPlusPoKSigProof.ts  BbsPlusPoKSigProtocol.ts  BbsPlusSig.ts  BbsPlusSigParams.ts  BbsPoKSigProof.ts  BbsPoKSigProtocol.ts  BbsSig.ts  BbsSigParams.ts  Bddt16MacParams.ts  CommitMessage.ts  CommitmentOrMessage.ts  IKBUniversalAccumulator.ts  IKeypair.ts  INonMembershipWitness.ts  IUniversalAccumulator.ts  Keypair.ts  NonMembershipWitness.ts  PSCommitMessage.ts  PSCommitmentOrMessage.ts  PSPoKSigProof.ts  PSPoKSigProtocol.ts  PSSig.ts  PSSigParams.ts  R1CS.ts  UniversalAccumulator.ts  VerifyResult.ts  index.ts
src/threshold_sig/: base_ot.rs  mod.rs  signing.rs
tests/: accumulator.rs  accumulator.spec.ts  bbs.rs  bbsSignature.spec.ts  bbs_plus.rs  bls12381.rs  bls12381.spec.ts  bound_check.rs  composite_proof_system.rs  dock_bbs_plus.rs  proofSystem.spec.ts  proof_system.rs  ps.rs  saver.rs
tests/bbsSignature/: createProof.bbsSignature.spec.ts  sign-verify.bbsSignature.spec.ts  sign.bbsSignature.spec.ts  verify.bbsSignature.spec.ts  verifyProof.bbsSignature.spec.ts
tests/circom/: test1.wasm  test2.wasm  test3.wasm  test4.wasm
tests/common/: mod.rs
tests/js/: accumulator.spec.ts  bbs.spec.ts  bbsPlus.spec.ts  bbsSignature.spec.ts  bddt16Kvac.spec.ts  boundCheck.spec.ts  frostDkg.spec.ts  general.spec.ts  kb-universal-accumulator.spec.ts  proofSystem.spec.ts  ps.spec.ts  psSignature.spec.ts  r1cs.spec.ts  saver.spec.ts  thresholdBbsPlusAndBbs.spec.ts  util.ts
tests/utilities/: index.ts
