[package]
authors = ["Dock.io", "Tobias Looker <tobias.looker@mattr.global>", "Mike Lodder <redmike7@gmail.com>"]
description = "WASM binding to Dock's crypto lib"
edition = "2021"
license = "Apache-2.0"
name = "dock_crypto_wasm"
repository = "https://github.com/docknetwork/crypto-wasm"
version = "0.21.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
console = ["console_error_panic_hook"]
default = ["dlmalloc"]

[dependencies]
console_error_panic_hook = { version = "0.1.7", optional = true }
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0"}
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "= 0.2.86"
dlmalloc = { version = "0.2.6", features = ["global"], optional = true }
serde_with = { version = "1.10.0", default-features = false, features = ["macros"] }

bbs_plus = { version = "0.23.0", default-features = false }
vb_accumulator = { version = "0.27.0", default-features = false }
schnorr_pok = { version = "0.21.0", default-features = false }
proof_system = { version = "0.32.0", default-features = false }
coconut-crypto = { version = "0.12.0", default-features = false }
dock_crypto_utils = { version = "0.21.0", default-features = false }
saver = { version = "0.19.0", default-features = false }
legogroth16 = { version = "0.16.0", default-features = false, features = ["circom", "wasmer-js"] }
secret_sharing_and_dkg = { version = "0.14.0", default-features = false }
oblivious_transfer_protocols = { version = "0.10.0", default-features = false}
bulletproofs_plus_plus = { version = "0.7.0", default-features = false}
smc_range_proof = { version = "0.7.0", default-features = false}
kvac = { version = "0.6.0", default-features = false}

ark-ec = { version = "^0.4.1", default-features = false }
ark-ff = { version = "^0.4.1", default-features = false }
ark-relations = { version = "^0.4.0", default-features = false }
ark-bls12-381 = { version = "^0.4.0", default-features = false, features = [ "curve" ] }
ark-serialize = { version = "^0.4.1", default-features = false, features = [ "derive" ] }
blake2 = { version = "0.10.6", default-features = false }
getrandom = { version = "0.2.12", features = ["js"] }
ark-std = { version = "^0.4.0", default-features = false }
zeroize = { version = "1.7.0", features = ["derive"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.33"
web-sys = { version = "0.3", features = ["console"] }

[profile.dev]
opt-level = 1

[profile.release]
lto = true
opt-level = 3

[package.metadata.wasm-pack.profile.dev]
# Should `wasm-opt` be used to further optimize the wasm binary generated after
# the Rust compiler has finished? Using `wasm-opt` can often further decrease
# binary size or do clever tricks that haven't made their way into LLVM yet.
#
# Configuration is set to `false` by default for the dev profile, but it can
# be set to an array of strings which are explicit arguments to pass to
# `wasm-opt`. For example `['-Os']` would optimize for size while `['-O4']`
# would execute very expensive optimizations passes
wasm-opt = false

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
# Should we enable wasm-bindgen's debug assertions in its generated JS glue?
debug-js-glue = true
# Should wasm-bindgen demangle the symbols in the "name" custom section?
demangle-name-section = true

[profile.wasm-profiling]
inherits = "release"

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = ['-O4']

[package.metadata.wasm-pack.profile.profiling.wasm-bindgen]
debug-js-glue = false
demangle-name-section = false
dwarf-debug-info = false

[profile.wasm-release]
inherits = "release"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O']

[package.metadata.wasm-pack.profile.release.wasm-bindgen]
debug-js-glue = false
demangle-name-section = true
dwarf-debug-info = false